# plogpro

./: .readthedocs.yaml  README.md  meta.yaml  setup.cfg
.github/workflows/: deploy_conda.yml  deploy_pypi.yml  unittest.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/api_reference/: logger.rst  profiler.rst  progressbar.rst  setting.rst
plogger/: __init__.py  logger.py  progressbar.py  settings.py
plogpro/: __init__.py  logger.py  logger_impl.py  profiler.py  profiler_impl.py  progressbar.py  progressbar_impl.py  settings.py
tests/: test_logger.py  test_profiler.py  test_progressbar.py
