[metadata]
name = plogpro
version = attr: plogpro.__version__
author = Wouter Heyvaert
author_email = wouter.heyvaert@hotmail.com
description = A simple and versatile Python package for logging, profiling and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wohe157/plogpro
project_urls =
    Bug Tracker = https://github.com/wohe157/plogpro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = plogpro
python_requires = >=3.6

[options.packages.find]
where = src

[coverage:run]
source = plogpro
